# tapeout-Compiler

backend/include/llvm/IR/: IntrinsicsRISCVBuddyExt.td
examples/BuckyBallDialect/: Main.cpp  Makefile  bb_mergetile_matmul.mlir  bb_metatile_matmul.mlir  bb_mul_warp16.mlir  bb_mvin.mlir  bb_mvout.mlir  bb_tile_matmul.mlir  matmul.mlir
examples/BuddyGemmini/: CMakeLists.txt
examples/BuddySparse/: .gitignore  CMakeLists.txt  Makefile  buddy-matmul-import.py  buddy-spmm-import.py  forward.mlir  subgraph0.mlir
examples/GemminiDialect/: makefile
frontend/Python/: frontend.py
midend/include/Dialect/BuckyBall/: BuckyBall.td  BuckyBallDialect.h  BuckyBallOps.h  CMakeLists.txt  Transform.h
midend/include/Dialect/Gemmini/: Gemmini.td  Transform.h
midend/include/buddy-mlir-c/: Dialects.h
midend/lib/: CMakeLists.txt  InitAll.cpp
midend/lib/CAPI/: CMakeLists.txt  Dialects.cpp  RegisterEverything.cpp
midend/lib/Conversion/: CMakeLists.txt
midend/lib/Conversion/LowerBuckyBall/: CMakeLists.txt  LowerBuckyBallPass.cpp
midend/lib/Conversion/LowerGemmini/: LowerGemminiPass.cpp
midend/lib/Conversion/LowerLinalgToBuckyBall/: CMakeLists.txt  LowerLinalgToBuckyBall.cpp
midend/lib/Conversion/LowerLinalgToGemmini/: LowerLinalgToGemmini.cpp
midend/lib/Dialect/: CMakeLists.txt
midend/lib/Dialect/BuckyBall/IR/: BuckyBallDialect.cpp  CMakeLists.txt
midend/lib/Dialect/BuckyBall/Transforms/: CMakeLists.txt  LegalizeForLLVMExport.cpp  test.cpp
midend/lib/Dialect/Gemmini/Transforms/: LegalizeForLLVMExport.cpp
midend/python/: CMakeLists.txt
midend/python/buddy_mlir/dialects/: BuckyBallBinding.td
tools/buddy-lsp-server/: buddy-lsp-server.cpp
tools/buddy-opt/: CMakeLists.txt  buddy-opt.cpp
